chore(character): adding logic of character
