# docs/swagger.json
@@ -4,6 +4,230 @@
         "contact": {}
     },
     "paths": {
+        "/characters": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Find characters",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "character"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.Character"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Create one character",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "character"
+                ],
+                "parameters": [
+                    {
+                        "description": "create new character",
+                        "name": "character",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.CharacterRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.HttpErr"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.HttpErr"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/characters/:id": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "find character by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "character"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Character ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.Character"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Update character",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "character"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Character ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "create new character",
+                        "name": "character",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.CharacterRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.Character"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.HttpErr"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Delete character",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "character"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Character ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "create new character",
+                        "name": "character",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.CharacterRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.Character"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.HttpErr"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/houses": {
             "get": {
                 "security": [
@@ -35,7 +259,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entities.House"
+                                "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.House"
                             }
                         }
                     },
@@ -67,7 +291,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.HouseRequest"
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.HouseRequest"
                         }
                     }
                 ],
@@ -78,13 +302,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/entities.HttpErr"
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.HttpErr"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/entities.HttpErr"
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.HttpErr"
                         }
                     },
                     "500": {
@@ -123,7 +347,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entities.House"
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.House"
                         }
                     },
                     "500": {
@@ -161,7 +385,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.HouseRequest"
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.HouseRequest"
                         }
                     }
                 ],
@@ -169,13 +393,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entities.House"
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.House"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/entities.HttpErr"
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.HttpErr"
                         }
                     },
                     "500": {
@@ -213,7 +437,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.HouseRequest"
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.HouseRequest"
                         }
                     }
                 ],
@@ -221,13 +445,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entities.House"
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.House"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/entities.HttpErr"
+                            "$ref": "#/definitions/github_com_PatrickChagastavares_game-of-thrones_internal_entities.HttpErr"
                         }
                     },
                     "500": {
@@ -238,7 +462,47 @@
         }
     },
     "definitions": {
-        "entities.House": {
+        "github_com_PatrickChagastavares_game-of-thrones_internal_entities.Character": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "tv_series": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_PatrickChagastavares_game-of-thrones_internal_entities.CharacterRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "tv_series": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "github_com_PatrickChagastavares_game-of-thrones_internal_entities.House": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -248,6 +512,9 @@
                     "type": "string"
                 },
                 "foundation_year": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "string"
                 },
                 "name": {
@@ -261,7 +528,7 @@
                 }
             }
         },
-        "entities.HouseRequest": {
+        "github_com_PatrickChagastavares_game-of-thrones_internal_entities.HouseRequest": {
             "type": "object",
             "required": [
                 "foundation_year",
@@ -289,7 +556,7 @@
                 }
             }
         },
-        "entities.HttpErr": {
+        "github_com_PatrickChagastavares_game-of-thrones_internal_entities.HttpErr": {
             "type": "object",
             "properties": {
                 "http_code": {
